--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <nav>
-        <article class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </article>
+        <div class="main-logo">
+            <img src="resources/main-logo.png">
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -24,7 +24,7 @@
             <li><a href="blog.html">Blog</a></li>
         </ul>
         <div class="menu-toggle">
-            <input type="checkbox">
+          <input type="checkbox">
             <span></span>
             <span></span>
             <span></span>
@@ -87,6 +87,6 @@
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
     </footer> 
-    <!-- <script src="script.js"></script> -->
+    <script src="../Project-Folder/js/script.js"></script>
     </body>
 </html>
