--- a/profile.html
+++ b/profile.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <nav>
-        <article class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </article>
+        <div class="main-logo">
+            <img src="resources/main-logo.png">
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -23,6 +23,12 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
+        <div class="menu-toggle">
+          <input type="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
     <div class="profile-header">
         <div> 
