--- a/faq.html
+++ b/faq.html
@@ -14,9 +14,9 @@
 </head>
 <body class="faq-page">
     <nav>
-        <article class="main-logo">
-            <a href="index.html"><img src="resources/main-logo.png"></a>
-        </article>
+        <div class="main-logo">
+            <img src="resources/main-logo.png">
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -24,6 +24,12 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="blog.html">Blog</a></li>
         </ul>
+        <div class="menu-toggle">
+          <input type="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
     <main>
         <section class="faq">
