--- a/faq.html
+++ b/faq.html
@@ -43,10 +43,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Esse harum fugit suscipit similique. Vitae minus,
-                            voluptate quam repellat laudantium impedit inventore omnis iste?
-                            Ipsam ad fuga tempora hic, itaque exercitationem.</p>
+                            <p>By Simply connecting to one of the printers at school.</p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question2">
@@ -56,23 +53,18 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Esse harum fugit suscipit similique. Vitae minus,
-                            voluptate quam repellat laudantium impedit inventore omnis iste?
-                            Ipsam ad fuga tempora hic, itaque exercitationem.</p>
+                            <p>Use the same printer, scan your paper and it should added on yourpc if you do it right.</p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question3">
                         <a class="faq-accordion-link" href="#question3">
-                            What do you need to do when you are sick / show symptoms of coronavirus?
+                            What do you need to do when you are sick/show symptoms of coronavirus?
                             <i class="icon ion-md-add"></i>
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Esse harum fugit suscipit similique. Vitae minus,
-                            voluptate quam repellat laudantium impedit inventore omnis iste?
-                            Ipsam ad fuga tempora hic, itaque exercitationem.</p>
+                            <p>Contact the teachers/helpdesk at school and stay home. Follow the lessons on stream to compensate for that unusual sickness.
+                            </p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question4">
@@ -82,10 +74,7 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Esse harum fugit suscipit similique. Vitae minus,
-                            voluptate quam repellat laudantium impedit inventore omnis iste?
-                            Ipsam ad fuga tempora hic, itaque exercitationem.</p>
+                            <p>You can book a room on the HZ page after logging in by pressing the Selfservice Portal, it should be easy from thereon out.</p>
                         </div>
                     </div>
                     <div class="faq-accordion-item" id="question5">
@@ -95,10 +84,8 @@
                             <i class="icon ion-md-remove"></i>
                         </a>
                         <div class="faq-answer">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Esse harum fugit suscipit similique. Vitae minus,
-                            voluptate quam repellat laudantium impedit inventore omnis iste?
-                            Ipsam ad fuga tempora hic, itaque exercitationem.</p>
+                            <p>You must park your car "across the road", at the parking lot of the former PEZM.
+                            </p>
                         </div>
                     </div>
                 </div>
