--- a/dashboard.html
+++ b/dashboard.html
@@ -30,6 +30,141 @@
             <span></span>
         </div>
     </nav>
+    <section>
+        <div class="study-monitor">
+            <div class="study-status">
+                <h1>My Dashboard</h1>
+            </div>
+            <div class="study-quartile">
+                <h1>&#8226 Quartile 1 &#8226</h1>
+                <div class="study-cards">
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Programme and Career Orientation</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Assesment</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Computer Science Basics</h2>
+                            <p><b>7.5</b> EC</p>
+                            <p>Written Exam</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Programming Basics</h2>
+                            <p><b>5</b> EC</p>
+                            <p>Case Study Exam</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="study-quartile">
+                <h1>&#8226 Quartile 2 &#8226</h1>
+                <div class="study-cards">
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Object Oriented Programming</h2>
+                            <p><b>10</b> EC</p>
+                            <p>Case Study and Project</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Professional Skills 1</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Portofolio Exam</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="study-quartile">
+                <h1>&#8226 Quartile 3 &#8226</h1>
+                <div class="study-cards">
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Framework Project 1</h2>
+                            <p><b>5</b> EC</p>
+                            <p>2 Portofolio Exams</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Framework Development 1</h2>
+                            <p><b>5</b> EC</p>
+                            <p>Case Study</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Professional Working Environtment</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Assessment</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Professional Skills 2</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Portofolio Exam and 2 Written Exams</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="study-quartile">
+                <h1>&#8226 Quartile 4 &#8226</h1>
+                <div class="study-cards">
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Framework Project 2</h2>
+                            <p><b>5</b> EC</p>
+                            <p>Portofolio Exam</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Framework Development 2</h2>
+                            <p><b>5</b> EC</p>
+                            <p>Portofolio Exam</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>Professional Skills 2</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Portofolio Exam and 2 Written Exams</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <article class="footer-content">
             <h3>Showcase Website</h3>
