--- a/dashboard.html
+++ b/dashboard.html
@@ -36,6 +36,40 @@
                 <h1>My Dashboard</h1>
             </div>
             <div class="study-quartile">
+                <h1>&#8226 NBSA Boundaries &#8226</h1>
+                <div class="study-cards">
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                        </div>
+                        <div class="study-cards-progress"></div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="study-quartile">
+                <h1>&#8226 Starter &#8226</h1>
+                <div class="study-cards">
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>HZ Personality</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Portofolio</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                    <div class="study-cards-item">
+                        <div class="study-cards-info">
+                            <h2>IT Personality</h2>
+                            <p><b>2.5</b> EC</p>
+                            <p>Portofolio</p>
+                            <div class="study-cards-progress"></div>
+                        </div>
+                        <h2 class="study-class-percentage">0</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="study-quartile">
                 <h1>&#8226 Quartile 1 &#8226</h1>
                 <div class="study-cards">
                     <div class="study-cards-item">
@@ -72,7 +106,7 @@
                 <div class="study-cards">
                     <div class="study-cards-item">
                         <div class="study-cards-info">
-                            <h2>Object Oriented Programming</h2>
+                            <h2>Object Oriented <br> Programming</h2>
                             <p><b>10</b> EC</p>
                             <p>Case Study and Project</p>
                             <div class="study-cards-progress"></div>
