--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="main-logo">
-            <img src="resources/main-logo.png">
+            <a href="index.html"><img src="resources/main-logo.png"></a>
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -103,6 +103,7 @@
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer>        
+    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
