--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer> 
-    <script src="../Project-Folder/js/script.js"></script>
+    </footer>  -->
+    <script src="js/script.js"></script>
     </body>
 </html>
