--- a/swot.html
+++ b/swot.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="main-logo">
-            <img src="resources/main-logo.png">
+            <a href="index.html"><img src="resources/main-logo.png"></a>
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -83,6 +83,6 @@
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
     </footer> 
-    <script src="../Project-Folder/js/script.js"></script>
+    <script src="js/script.js"></script>
     </body>
 </html>
