--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
 <body class="faq-page">
     <nav>
         <div class="main-logo">
-            <img src="resources/main-logo.png">
+            <a href="index.html"><img src="resources/main-logo.png"></a>
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -108,6 +108,6 @@
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
     </footer>
-    <script src="script.js"></script>   
+    <script src="js/script.js"></script>   
 </body>
 </html>
