--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | Showcase Website</title>
+    <title>Dashboard | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,13 +36,11 @@
                 <h1>My Dashboard</h1>
             </div>
             <div class="study-quartile">
-                <h1>&#8226 NBSA Boundaries &#8226</h1>
-                <div class="study-cards">
-                    <div class="study-cards-item">
-                        <div class="study-cards-info">
-                        </div>
-                        <div class="study-cards-progress"></div>
-                        <h2 class="study-class-percentage">0</h2>
+                <h1>&#8226 Overall &#8226</h1>
+                <div class="nbsa-study-cards">
+                    <div class="nbsa-study-cards-item">
+                        <div class="nbsa-study-cards-progress"></div>
+                        <h2 class="nbsa-study-class-percentage">0</h2>
                     </div>
                 </div>
             </div>
