--- a/study-choice.html
+++ b/study-choice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Showcase Website</title>
+    <title>Study Choice | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,36 +33,29 @@
     <header class="index-header">
         <div class="index-main-text-container">
             <h1>Study<br>Choice</h1>
-            <p>What initiatives did I take to make my study choice?</p>
+            <p>A combination of the sections study choice activities,
+            motivate your study choice and after completing the study from my SKC document</p>
         </div>
     </header>
     <section class="course">
-        <h1>My Motivation</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.</p>
+        <h1>My Study Choice</h1>
         <div class="course-row">
             <div class="course-col">
-                <h3>Heading 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+                <h3>Motivate My Study Choice</h3>
+                <p>Since I was a kid, my father often teach me about computer.
+                    Moreover, when I was in junior high school, I love to learn about Visual Basic or SQL.
+                    I assume that I can improving my hobby in IT if I choose ICT programme.</p>
             </div>
             <div class="course-col">
-                <h3>Heading 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+                <h3>After Completing The Study</h3>
+                <p>I have plan to work in big IT company for several years and after that I make my own startup company.
+                My dream is to become CEO in my own company
+                I want to learn about programming, creating start-up company,
+                learn business model of an IT company, and also team work.</p>
             </div>
             <div class="course-col">
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+                <h3>Study Choice Activities</h3>
+                <p>I believe in my abilities that I can grow in my current study choice</p>
             </div>
         </div>
     </section>
