--- a/swot.html
+++ b/swot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Showcase Website</title>
+    <title>SWOT Analysis | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,35 +37,45 @@
             opportunities and threats I expect in my studies.</p>
         </div>
     </header>
-    <section class="course">
-        <h1>My Motivation</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.</p>
-        <div class="course-row">
-            <div class="course-col">
-                <h3>Heading 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+    <section class="swot">
+            <div class="swot-card">
+                <h1>Strengths</h1>
+                <span></span>
+                <ul>
+                    <li>Focus</li>
+                    <li>Perfectionist</li>
+                    <li>Diligent</li>
+                    <li>Conscientious</li>
+                </ul>
             </div>
-            <div class="course-col">
-                <h3>Heading 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+            <div class="swot-card">
+                <h1>Weaknesses</h1>
+                <span></span>
+                <ul>
+                    <li>Too much thinking</li>
+                    <li>Too ambitious</li>
+                    <li>Less careful person</li>
+                    <li>Slow adaptation</li>
+                </ul>
             </div>
-            <div class="course-col">
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+            <div class="swot-card">
+                <h1>Opportunities</h1>
+                <span></span>
+                <ul>
+                    <li>Good environment</li>
+                    <li>Family support</li>
+                    <li>Friends support</li>
+                </ul>
             </div>
-        </div>
+            <div class="swot-card">
+                <h1>Threats</h1>
+                <span></span>
+                <ul>
+                    <li>Different culture</li>
+                    <li>Hanging out</li>
+                    <li>Playing too much</li>
+                </ul>
+            </div>
     </section>
     <footer>
         <article class="footer-content">
