--- a/prog-exp.html
+++ b/prog-exp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Showcase Website</title>
+    <title>Programming Experience | Alessandro Ryo</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,33 +38,9 @@
     </header>
     <section class="course">
         <h1>My Motivation</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.</p>
-        <div class="course-row">
-            <div class="course-col">
-                <h3>Heading 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            </div>
-            <div class="course-col">
-                <h3>Heading 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            </div>
-            <div class="course-col">
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            </div>
-        </div>
+        <p>When I was in the third grade, I joined the Scratch game development class for 1 or 2 years.
+        Furthermore, I learned Pascal Visual Basic in junior high school and joined SQL server course.
+        Sometimes, I also search for Python programming language on Youtube to do my hobby.</p>
     </section>
     <footer>
         <article class="footer-content">
