--- a/index.html
+++ b/index.html
@@ -41,33 +41,27 @@
             <img src="resources/home-image-1.png" class="index-main-image-container">
         </div>
     </header>
-    <section class="course">
-        <h1>My Motivation</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.</p>
-        <div class="course-row">
-            <div class="course-col">
-                <h3>Heading 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+    <section class="index">
+        <h1>Choosing HBO-ICT</h1>
+        <p>Saya memilih jurusan HBO-ICT di HZ University of Applied Science, karena sejak saya masih kecil,
+        saya sangat menyukai komputer dan games. Kemudian saya ingin sekali bersekolah di negeri
+        Belanda, jauh dari Indonesia. Saya berkuliah di HZ akan sangat cocok dengan harapan dan cita-cita
+        saya. Untuk pengalaman lebih jauh lihat <a href="blog.html">blog</a> saya.</p>
+        <h3>Pendapat saya yang lain...</h3>
+        <div class="index-row">
+            <div class="index-col">
+                <h3>Passion</h3>
+                <p>Memilih HBO-ICT adalah pilihan hidup saya dan passion saya ada di jurusan ini.</p>
             </div>
-            <div class="course-col">
-                <h3>Heading 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+            <div class="index-col">
+                <h3>Successful Figure</h3>
+                <p>Saya melihat banyak contoh tokoh yang sukses berkat keahliannya di dunia ICT.</p>
             </div>
-            <div class="course-col">
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+            <div class="index-col">
+                <h3>Parent Experience</h3>
+                <p>Ayah saya adalah seorang yang bekerja di bidang IT selama lebih dari 20 tahun
+                dan saya sering diceritakan tentang pengalaman sehari-hari bekerja di bidang IT.
+                </p>
             </div>
         </div>
     </section>
