--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,7 @@
     </nav>
     <div class="profile-header">
         <div> 
-            <img src="resources/profile-picture-full.png" class="profile-main-image-container">
+            <img src="resources/profile-face.png" class="profile-main-image-container">
         </div>
         <div class="profile-main-text-container">
             <h1>ALESSANDRO RYO</h1>
@@ -52,25 +52,28 @@
         </div>
     </div>
     <main>
-        <article class="course">
+        <article class="profile">
             <article>
                 <h1>Hello! I'm Ryo</h1>
-                <p>Pada halaman ini, saya akan memberikan gambaran diri saya kepada kalian.<br>
-                Saya harap kalian bisa lebih tahu siapa diri saya.</p>
+                <div class="profile-text">
+                    <p>A student and a dreamer. Sekarang saya bersekolah di HZ University of Applied Sciences.
+                    <br>Pada halaman ini, saya akan memberikan gambaran diri saya kepada kalian.<br>
+                    Saya harap kalian bisa lebih tahu siapa diri saya.</p>
+                </div>
             </article>
-            <article div class="course-row">
-                <article class="course-col">
+            <article div class="profile-row">
+                <article class="profile-col">
                     <h3>Where do I came from?</h3>
                     <p>Saya berasal dari Indonesia. Salah satu negara dengan banyak kebudayaan
                     dan bahasa.</p>
                 </article>
-                <article class="course-col">
+                <article class="profile-col">
                     <h3>What are my hobbies?</h3>
                     <p>Hobi saya sebenarnya tidak terlalu banyak, namun cukup menyenangkan.
                     Saya sangat menyukai hal apapun tentang sepak bola. Saya juga senang bermain game,
                     terlebih bersama dengan teman-teman. Dan hobi saya yang terakhir adalah tidur.</p>
                 </article>
-                <article class="course-col">
+                <article class="profile-col">
                     <h3>What movie or song do I like?</h3>
                     <p>Film yang paling saya sukai adalah film bergenre sci-fi ataupun action, tapi saya juga
                     terbuka untuk menonton film-film lainnya. Kalau lagu, saya lebih suka lagu bergenre pop dan
@@ -79,8 +82,7 @@
             </article>
         </article> 
         <article class="edu-title">
-            <h2>Education</h2>
-            <h4>Perjalanan hidup saya tidak lepas dari namanya pendidikan.</h4>
+            <h2>&#8226 Education &#8226</h2>
         </article>
         <article class="edu-container">
             <article class="edu-timeline">
@@ -103,9 +105,7 @@
             </article>
         </article>
     <div class="org-title">
-        <h2>Organization</h2>
-        <h4>Pendidikan yang baik, harus dibarengi juga dengan kemampuan berorganisasi.
-        <br>Khususnya di masa SMA, saya sudah pernah mengikuti organisasi yang ada di sekolah.</h4>
+        <h2>&#8226 Organization &#8226</h2>
     </div>
     <div class="org-container">
         <div class="org-timeline">
