--- a/swot.html
+++ b/swot.html
@@ -45,7 +45,7 @@
                     <li>Focus</li>
                     <li>Perfectionist</li>
                     <li>Diligent</li>
-                    <li>Conscientious</li>
+                    <li>Responsible</li>
                 </ul>
             </div>
             <div class="swot-card">
