--- a/skc-feedback.html
+++ b/skc-feedback.html
@@ -37,34 +37,8 @@
         </div>
     </header>
     <section class="course">
-        <h1>My Motivation</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.</p>
-        <div class="course-row">
-            <div class="course-col">
-                <h3>Heading 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            </div>
-            <div class="course-col">
-                <h3>Heading 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            </div>
-            <div class="course-col">
-                <h3>Heading 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            </div>
-        </div>
+        <h1>Sorry, this page is not available</h1>
+        <p></p>
     </section>
     <footer>
         <article class="footer-content">
