--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
     </header>
     <section class="index">
         <h1>Choosing HBO-ICT</h1>
-        <p>Saya memilih jurusan HBO-ICT di HZ University of Applied Science, karena sejak saya masih kecil,
-        saya sangat menyukai komputer dan games. Kemudian saya ingin sekali bersekolah di negeri
-        Belanda, jauh dari Indonesia. Saya berkuliah di HZ akan sangat cocok dengan harapan dan cita-cita
-        saya. Untuk pengalaman lebih jauh lihat <a href="blog.html">blog</a> saya.</p>
-        <h3>Pendapat saya yang lain...</h3>
+        <div class="index-text">
+            <p>Saya memilih jurusan HBO-ICT di HZ University of Applied Science, karena sejak saya masih kecil,
+            saya sangat menyukai komputer dan games. Kemudian saya ingin sekali bersekolah di negeri
+            Belanda, jauh dari Indonesia. Saya berkuliah di HZ akan sangat cocok dengan harapan dan cita-cita
+            saya. Untuk pengalaman lebih jauh lihat <a href="blog.html">blog</a> saya.</p>
+            <h3>Pendapat saya yang lain...</h3>
+        </div>
         <div class="index-row">
             <div class="index-col">
                 <h3>Passion</h3>
