--- a/profile.html
+++ b/profile.html
@@ -56,28 +56,27 @@
             <article>
                 <h1>Hello! I'm Ryo</h1>
                 <div class="profile-text">
-                    <p>A student and a dreamer. Sekarang saya bersekolah di HZ University of Applied Sciences.
-                    <br>Pada halaman ini, saya akan memberikan gambaran diri saya kepada kalian.<br>
-                    Saya harap kalian bisa lebih tahu siapa diri saya.</p>
+                    <p>A student and a dreamer. Now, I study at HZ University of Applied Sciences.
+                    On this page, I will give you an overview of myself. I hope you can know more about who I am.</p>
                 </div>
             </article>
             <article div class="profile-row">
                 <article class="profile-col">
                     <h3>Where do I came from?</h3>
-                    <p>Saya berasal dari Indonesia. Salah satu negara dengan banyak kebudayaan
-                    dan bahasa.</p>
+                    <p>I came from Indonesia</p>
                 </article>
                 <article class="profile-col">
                     <h3>What are my hobbies?</h3>
-                    <p>Hobi saya sebenarnya tidak terlalu banyak, namun cukup menyenangkan.
-                    Saya sangat menyukai hal apapun tentang sepak bola. Saya juga senang bermain game,
-                    terlebih bersama dengan teman-teman. Dan hobi saya yang terakhir adalah tidur.</p>
+                    <p>My hobby is actually not too much,
+                    but quite fun. I really like anything about football.
+                    I also enjoy playing games, especially with my friends
+                    and my last hobby is sleeping.</p>
                 </article>
                 <article class="profile-col">
                     <h3>What movie or song do I like?</h3>
-                    <p>Film yang paling saya sukai adalah film bergenre sci-fi ataupun action, tapi saya juga
-                    terbuka untuk menonton film-film lainnya. Kalau lagu, saya lebih suka lagu bergenre pop dan
-                    berasal dari Indonesia.</p>
+                    <p>My favorite films are sci-fi or action films,
+                    but I am also open to watching other films.
+                    I prefer pop genre songs and produce from Indonesia.</p>
                 </article>
             </article>
         </article> 
