--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <header class="index-header">
         <div class="index-main-text-container">
             <h1>HBO-ICT?<br>Why?</h1>
-            <p>Kenapa saya memilih di jurusan HBO? Apa yang memotivasi saya? Sebelum itu,
-            kalian bisa melihat profil diri saya terlebih dahulu</p>
+            <p>Why did I choose the HBO-ICT? What motivates me?
+            Before that, you can see my profile first.</p>
             <a href="profile.html">Look at my profile</a>
         </div>
         <div> 
@@ -44,26 +44,25 @@
     <section class="index">
         <h1>Choosing HBO-ICT</h1>
         <div class="index-text">
-            <p>Saya memilih jurusan HBO-ICT di HZ University of Applied Science, karena sejak saya masih kecil,
-            saya sangat menyukai komputer dan games. Kemudian saya ingin sekali bersekolah di negeri
-            Belanda, jauh dari Indonesia. Saya berkuliah di HZ akan sangat cocok dengan harapan dan cita-cita
-            saya. Untuk pengalaman lebih jauh lihat <a href="blog.html">blog</a> saya.</p>
+            <p>I chose HBO-ICT at HZ University of Applied Science,
+            because since I was a kid, I really liked computers and games.
+            Then I really wanted to study in the Netherlands, far from Indonesia.
+            Studying at HZ would fit my hopes and dreams very well.
+            For more experience see my <a href="blog.html">blog</a>.</p>
             <h3>Pendapat saya yang lain...</h3>
         </div>
         <div class="index-row">
             <div class="index-col">
                 <h3>Passion</h3>
-                <p>Memilih HBO-ICT adalah pilihan hidup saya dan passion saya ada di jurusan ini.</p>
+                <p>Choosing HBO-ICT is my life choice and my passion is in this major.</p>
             </div>
             <div class="index-col">
                 <h3>Successful Figure</h3>
-                <p>Saya melihat banyak contoh tokoh yang sukses berkat keahliannya di dunia ICT.</p>
+                <p>I see many examples of successful figures because of their expertise in the ICT world.</p>
             </div>
             <div class="index-col">
                 <h3>Parent Experience</h3>
-                <p>Ayah saya adalah seorang yang bekerja di bidang IT selama lebih dari 20 tahun
-                dan saya sering diceritakan tentang pengalaman sehari-hari bekerja di bidang IT.
-                </p>
+                <p>My father have worked in IT for more than 20 years and I am often told about my father day-to-day experiences working in IT.</p>
             </div>
         </div>
     </section>
