--- a/prog-exp.html
+++ b/prog-exp.html
@@ -36,7 +36,7 @@
             <p>Do I have programming experience? How's the story? Check it out!!!</p>
         </div>
     </header>
-    <section class="course">
+    <section class="answer">
         <h1>My Motivation</h1>
         <p>When I was in the third grade, I joined the Scratch game development class for 1 or 2 years.
         Furthermore, I learned Pascal Visual Basic in junior high school and joined SQL server course.
