--- a/study-choice.html
+++ b/study-choice.html
@@ -37,23 +37,23 @@
             motivate your study choice and after completing the study from my SKC document</p>
         </div>
     </header>
-    <section class="course">
+    <section class="answer">
         <h1>My Study Choice</h1>
-        <div class="course-row">
-            <div class="course-col">
+        <div class="answer-row">
+            <div class="answer-col">
                 <h3>Motivate My Study Choice</h3>
                 <p>Since I was a kid, my father often teach me about computer.
                     Moreover, when I was in junior high school, I love to learn about Visual Basic or SQL.
                     I assume that I can improving my hobby in IT if I choose ICT programme.</p>
             </div>
-            <div class="course-col">
+            <div class="answer-col">
                 <h3>After Completing The Study</h3>
                 <p>I have plan to work in big IT company for several years and after that I make my own startup company.
                 My dream is to become CEO in my own company
                 I want to learn about programming, creating start-up company,
                 learn business model of an IT company, and also team work.</p>
             </div>
-            <div class="course-col">
+            <div class="answer-col">
                 <h3>Study Choice Activities</h3>
                 <p>I believe in my abilities that I can grow in my current study choice</p>
             </div>
