--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             Then I really wanted to study in the Netherlands, far from Indonesia.
             Studying at HZ would fit my hopes and dreams very well.
             For more experience see my <a href="blog.html">blog</a>.</p>
-            <h3>Pendapat saya yang lain...</h3>
+            <h3>My other opinions...</h3>
         </div>
         <div class="index-row">
             <div class="index-col">
